fix scroll on mobile version

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,6 +41,10 @@
   }
 }
 
+.app {
+  overflow-y: auto;
+}
+
 body {
   font-size: 17px;
   line-height: 24px;
@@ -166,7 +170,7 @@ header .header .contacts button:hover {
   width: 100%;
   color: #fff;
   position: fixed;
-  top: 0;
+  top: 0px;
   z-index: 300;
 }
 
@@ -1212,9 +1216,9 @@ footer a img {
   width: 55px;
   height: 55px;
   z-index: 300;
-  -webkit-transition: 0.3s ease;
-  -o-transition: 0.3s ease;
-  transition: 0.3s ease;
+  -webkit-transition: 1s ease;
+  -o-transition: 1s ease;
+  transition: 1s ease;
 }
 
 .up:hover {
@@ -1244,9 +1248,9 @@ footer a img {
   width: 55px;
   height: 55px;
   z-index: 300;
-  -webkit-transition: 0.3s ease;
-  -o-transition: 0.3s ease;
-  transition: 0.3s ease;
+  -webkit-transition: 1s ease;
+  -o-transition: 1s ease;
+  transition: 1s ease;
   transform: rotate(180deg);
 }
 
@@ -1607,7 +1611,7 @@ footer a img {
     margin-left: 5px;
     padding: 0px 10px;
     border-radius: 30%;
-    opacity: 0.8;
+    opacity: 0.7;
   }
 
   .menu-button:active {
@@ -1628,7 +1632,7 @@ footer a img {
     z-index: 100;
     display: block;
     border-radius: 5px;
-    opacity: 0.8;
+    opacity: 0.7;
     height: 0;
     transition: 0.2s; /*Скорость перехода состояния элемента*/
     animation: disclosure 0.2s 1; /* Указываем название анимации, её время и количество повторов*/
